fix nav bar collapse in mobile

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,13 +1,13 @@
 
-.navMenu {
+.navMenu{
     color: white;
 
-    float: right;
+    
 }
 
 
 #navAbout, #navPort, #navContact{
-    float: right;
+    
     margin: 0 10px;
     line-height: 50px;
     height: 50px;
@@ -46,6 +46,8 @@
 .navDiv {
     width: 100%;
     height: 50px;
+
+    
    
     
 }
@@ -56,4 +58,8 @@
 }
 .navbar {
     opacity: .85;
+}
+
+.navbar-collapse {
+    justify-content: flex-end;
 }
